--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         </div>
       );
 
-      // FOCUS MODE - Improved compact design
+      // FOCUS MODE - Improved compact design with dark mode fix
       if(focusMode&&screen==='game'){
         const ft=focusMode==='home'?
           {name:sidesSwapped?awayName:homeName,score:sidesSwapped?totals.awayScore:totals.homeScore,saves:sidesSwapped?totals.awaySaves:totals.homeSaves,team:sidesSwapped?'away':'home',oppScore:sidesSwapped?totals.homeScore:totals.awayScore}:
@@ -450,50 +450,50 @@
             <div className="max-w-4xl mx-auto p-3">
               <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-xl shadow-xl p-4`}>
                 {/* GOALS SECTION */}
-                <div className="text-lg font-semibold mb-3 text-center opacity-75">{t.goals}</div>
+                <div className={`text-lg font-semibold mb-3 text-center ${darkMode?'text-gray-200':'opacity-75'}`}>{t.goals}</div>
                 <div className="grid grid-cols-2 gap-3 mb-4">
                   {/* Focus Team Goals */}
                   <div className={`${darkMode?'bg-gray-700':'bg-blue-50'} rounded-lg p-3`}>
-                    <div className="text-sm font-semibold text-center mb-2">{ft.name}</div>
+                    <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{ft.name}</div>
                     <div className="flex items-center justify-center gap-2 mb-2">
                       <button onClick={()=>updateStat(ft.team,'Score',-1)} disabled={matchEnded} className="bg-red-500 hover:bg-red-600 text-white w-12 h-12 rounded-lg text-2xl font-bold">−</button>
-                      <div className={`text-5xl font-bold text-center min-w-[80px] ${sparkleStats[`${ft.team}Score${currentPeriod}`]?'sparkle':''}`}>{ft.score}</div>
+                      <div className={`text-5xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ft.team}Score${currentPeriod}`]?'sparkle':''}`}>{ft.score}</div>
                       <button onClick={()=>updateStat(ft.team,'Score',1)} disabled={matchEnded} className="bg-green-500 hover:bg-green-600 text-white w-12 h-12 rounded-lg text-2xl font-bold">+</button>
                     </div>
-                    <div className="text-xs opacity-75 text-center">{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ft.team+'Score']}{i<2?'-':''}</span>)}</div>
+                    <div className={`text-xs text-center ${darkMode?'text-gray-300':'opacity-75'}`}>{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ft.team+'Score']}{i<2?'-':''}</span>)}</div>
                   </div>
                   
                   {/* Opponent Goals */}
                   <div className={`${darkMode?'bg-gray-700':'bg-red-50'} rounded-lg p-3`}>
-                    <div className="text-sm font-semibold text-center mb-2">{on}</div>
+                    <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{on}</div>
                     <div className="flex items-center justify-center gap-2 mb-2">
                       <button onClick={()=>updateStat(ot,'Score',-1)} disabled={matchEnded} className="bg-red-500 hover:bg-red-600 text-white w-12 h-12 rounded-lg text-2xl font-bold">−</button>
-                      <div className={`text-5xl font-bold text-center min-w-[80px] ${sparkleStats[`${ot}Score${currentPeriod}`]?'sparkle':''}`}>{os}</div>
+                      <div className={`text-5xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ot}Score${currentPeriod}`]?'sparkle':''}`}>{os}</div>
                       <button onClick={()=>updateStat(ot,'Score',1)} disabled={matchEnded} className="bg-green-500 hover:bg-green-600 text-white w-12 h-12 rounded-lg text-2xl font-bold">+</button>
                     </div>
-                    <div className="text-xs opacity-75 text-center">{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ot+'Score']}{i<2?'-':''}</span>)}</div>
+                    <div className={`text-xs text-center ${darkMode?'text-gray-300':'opacity-75'}`}>{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ot+'Score']}{i<2?'-':''}</span>)}</div>
                   </div>
                 </div>
 
                 {/* SAVES SECTION */}
                 <div className={`pt-4 border-t-2 ${darkMode?'border-gray-600':'border-gray-200'}`}>
-                  <div className="text-lg font-semibold mb-3 text-center opacity-75">{t.saves}</div>
+                  <div className={`text-lg font-semibold mb-3 text-center ${darkMode?'text-gray-200':'opacity-75'}`}>{t.saves}</div>
                   <div className="grid grid-cols-2 gap-3 mb-4">
                     {/* Focus Team Saves */}
                     <div className={`${darkMode?'bg-gray-700':'bg-blue-50'} rounded-lg p-3`}>
-                      <div className="text-sm font-semibold text-center mb-2">{ft.name}</div>
+                      <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{ft.name}</div>
                       <div className="flex items-center justify-center gap-2 mb-2">
                         <button onClick={()=>updateStat(ft.team,'Saves',-1)} disabled={matchEnded} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
-                        <div className={`text-4xl font-bold text-center min-w-[80px] ${sparkleStats[`${ft.team}Saves${currentPeriod}`]?'sparkle':''}`}>{ft.saves}</div>
+                        <div className={`text-4xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ft.team}Saves${currentPeriod}`]?'sparkle':''}`}>{ft.saves}</div>
                         <button onClick={()=>updateStat(ft.team,'Saves',1)} disabled={matchEnded} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
                       </div>
-                      <div className="text-xs opacity-75 text-center mb-2">{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ft.team+'Saves']}{i<2?'-':''}</span>)}</div>
-                      <div className={`${darkMode?'bg-gray-600':'bg-white'} rounded p-2 text-xs`}>
+                      <div className={`text-xs text-center mb-2 ${darkMode?'text-gray-300':'opacity-75'}`}>{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ft.team+'Saves']}{i<2?'-':''}</span>)}</div>
+                      <div className={`${darkMode?'bg-gray-600 text-gray-100':'bg-white'} rounded p-2 text-xs`}>
                         <div className="flex justify-between mb-1"><span>{t.shotsFor}:</span><span className="font-bold">{(() => {
                           const oppTeam = ft.team === 'home' ? 'away' : 'home';
                           return [1,2,3].reduce((sum,p)=>sum+(periodStats[p][oppTeam+'Saves']+periodStats[p][ft.team+'Score']),0);
                         })()}</span></div>
-                        <div className="text-center opacity-75">({[1,2,3].map(p=>{
+                        <div className={`text-center ${darkMode?'text-gray-300':'opacity-75'}`}>({[1,2,3].map(p=>{
                           const oppTeam = ft.team === 'home' ? 'away' : 'home';
                           return periodStats[p][oppTeam+'Saves']+periodStats[p][ft.team+'Score'];
                         }).join('-')})</div>
@@ -501,29 +501,29 @@
                           const oppTeam = ft.team === 'home' ? 'away' : 'home';
                           return [1,2,3].reduce((sum,p)=>sum+(periodStats[p][ft.team+'Saves']+periodStats[p][oppTeam+'Score']),0);
                         })()}</span></div>
-                        <div className="text-center opacity-75">({[1,2,3].map(p=>{
+                        <div className={`text-center ${darkMode?'text-gray-300':'opacity-75'}`}>({[1,2,3].map(p=>{
                           const oppTeam = ft.team === 'home' ? 'away' : 'home';
                           return periodStats[p][ft.team+'Saves']+periodStats[p][oppTeam+'Score'];
                         }).join('-')})</div>
-                        <div className="flex justify-between mt-2 pt-2 border-t"><span>{t.savePercent}:</span><span className="font-bold">{calcSP(ft.saves,ft.oppScore)}%</span></div>
+                        <div className={`flex justify-between mt-2 pt-2 border-t ${darkMode?'border-gray-500':''}`}><span>{t.savePercent}:</span><span className="font-bold">{calcSP(ft.saves,ft.oppScore)}%</span></div>
                       </div>
                     </div>
                     
                     {/* Opponent Saves */}
                     <div className={`${darkMode?'bg-gray-700':'bg-red-50'} rounded-lg p-3`}>
-                      <div className="text-sm font-semibold text-center mb-2">{on}</div>
+                      <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{on}</div>
                       <div className="flex items-center justify-center gap-2 mb-2">
                         <button onClick={()=>updateStat(ot,'Saves',-1)} disabled={matchEnded} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
-                        <div className={`text-4xl font-bold text-center min-w-[80px] ${sparkleStats[`${ot}Saves${currentPeriod}`]?'sparkle':''}`}>{otsv}</div>
+                        <div className={`text-4xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ot}Saves${currentPeriod}`]?'sparkle':''}`}>{otsv}</div>
                         <button onClick={()=>updateStat(ot,'Saves',1)} disabled={matchEnded} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
                       </div>
-                      <div className="text-xs opacity-75 text-center mb-2">{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ot+'Saves']}{i<2?'-':''}</span>)}</div>
-                      <div className={`${darkMode?'bg-gray-600':'bg-white'} rounded p-2 text-xs`}>
+                      <div className={`text-xs text-center mb-2 ${darkMode?'text-gray-300':'opacity-75'}`}>{t.byPeriod}: {[1,2,3].map((p,i)=><span key={p} className={p===currentPeriod?'font-bold underline':''}>{periodStats[p][ot+'Saves']}{i<2?'-':''}</span>)}</div>
+                      <div className={`${darkMode?'bg-gray-600 text-gray-100':'bg-white'} rounded p-2 text-xs`}>
                         <div className="flex justify-between mb-1"><span>{t.shotsFor}:</span><span className="font-bold">{(() => {
                           const oppTeam = ot === 'home' ? 'away' : 'home';
                           return [1,2,3].reduce((sum,p)=>sum+(periodStats[p][oppTeam+'Saves']+periodStats[p][ot+'Score']),0);
                         })()}</span></div>
-                        <div className="text-center opacity-75">({[1,2,3].map(p=>{
+                        <div className={`text-center ${darkMode?'text-gray-300':'opacity-75'}`}>({[1,2,3].map(p=>{
                           const oppTeam = ot === 'home' ? 'away' : 'home';
                           return periodStats[p][oppTeam+'Saves']+periodStats[p][ot+'Score'];
                         }).join('-')})</div>
@@ -531,11 +531,11 @@
                           const oppTeam = ot === 'home' ? 'away' : 'home';
                           return [1,2,3].reduce((sum,p)=>sum+(periodStats[p][ot+'Saves']+periodStats[p][oppTeam+'Score']),0);
                         })()}</span></div>
-                        <div className="text-center opacity-75">({[1,2,3].map(p=>{
+                        <div className={`text-center ${darkMode?'text-gray-300':'opacity-75'}`}>({[1,2,3].map(p=>{
                           const oppTeam = ot === 'home' ? 'away' : 'home';
                           return periodStats[p][ot+'Saves']+periodStats[p][oppTeam+'Score'];
                         }).join('-')})</div>
-                        <div className="flex justify-between mt-2 pt-2 border-t"><span>{t.savePercent}:</span><span className="font-bold">{calcSP(otsv,ft.score)}%</span></div>
+                        <div className={`flex justify-between mt-2 pt-2 border-t ${darkMode?'border-gray-500':''}`}><span>{t.savePercent}:</span><span className="font-bold">{calcSP(otsv,ft.score)}%</span></div>
                       </div>
                     </div>
                   </div>
@@ -801,5 +801,6 @@
   </script>
 </body>
 </html>
+
 
 
