--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
 
           <div className="max-w-6xl mx-auto p-4">
                                    {activeTab==='audio'&&<div>
-              {/* Intro Section */}
+                            {/* Intro Section */}
               <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-4 mb-4`}>
                 <h3 className={`text-lg font-semibold mb-3 ${darkMode?'text-white':''}`}>🎵 {t.intro}</h3>
                 <button onClick={toggleIntro} className={`w-full ${introPlaying?(darkMode?'bg-green-700 hover:bg-green-600':'bg-green-600 hover:bg-green-700'):(darkMode?'bg-gray-700 hover:bg-gray-600':'bg-gray-100 hover:bg-gray-200')} ${darkMode&&!introPlaying?'text-gray-200':'text-white'} ${!darkMode&&!introPlaying?'text-gray-800':''} p-4 rounded-lg font-semibold transition-colors`}>
@@ -726,7 +726,7 @@
                     {sound:'awayGoal',label:awayName,bg:darkMode?'bg-red-900 bg-opacity-40':'bg-red-50',hover:darkMode?'hover:bg-red-900 hover:bg-opacity-60':'hover:bg-red-100',text:darkMode?'text-red-200':'text-red-800',border:darkMode?'border-red-700':'border-red-200'}
                   ].map(btn=>(
                     <button key={btn.sound} onClick={()=>playSound(btn.sound)} className={`${btn.bg} ${btn.hover} ${btn.text} border-2 ${btn.border} p-4 rounded-lg font-semibold transition-colors`}>
-                      🚨 {btn.label}
+                      {btn.label}
                     </button>
                   ))}
                 </div>
@@ -741,7 +741,7 @@
                     {sound:'awayPenalty',label:awayName,bg:darkMode?'bg-orange-900 bg-opacity-30':'bg-orange-50',hover:darkMode?'hover:bg-orange-900 hover:bg-opacity-50':'hover:bg-orange-100',text:darkMode?'text-orange-200':'text-orange-900',border:darkMode?'border-orange-700':'border-orange-300'}
                   ].map(btn=>(
                     <button key={btn.sound} onClick={()=>playSound(btn.sound)} className={`${btn.bg} ${btn.hover} ${btn.text} border-2 ${btn.border} p-4 rounded-lg font-semibold transition-colors`}>
-                      ⚠️ {btn.label}
+                      {btn.label}
                     </button>
                   ))}
                 </div>
@@ -749,8 +749,9 @@
 
               {/* Stop All Button */}
               <button onClick={stopAllSounds} className={`w-full ${darkMode?'bg-red-900 bg-opacity-40 hover:bg-red-900 hover:bg-opacity-60 border-2 border-red-700 text-red-200':'bg-red-50 hover:bg-red-100 border-2 border-red-300 text-red-900'} py-3 rounded-lg font-semibold mb-4 transition-colors`}>
-                🛑 {t.stopAllSounds}
+                {t.stopAllSounds}
               </button>
+
               
               {/* Spotify Section */}
               <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-4`}>
@@ -832,6 +833,7 @@
   </script>
 </body>
 </html>
+
 
 
 
