--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 </div>
                 <div className="flex gap-2">
                   <button onClick={()=>setStatsCollapsed(!statsCollapsed)} className={`${darkMode?'bg-gray-700':'bg-white bg-opacity-20'} px-3 py-1 rounded text-sm`}>{statsCollapsed?'▼':'▲'}</button>
-                  <button onClick={()=>setShowSettings(!showSettings)} className={`${darkMode?'bg-gray-700':'bg-white bg-opacity-20'} px-3 py-1 rounded text-sm`}>⚙️</button>
+                  <button onClick={()=>setShowSettings(!showSettings)} className={`${darkMode?'bg-gray-700':'bg-white bg-opacity-20'} px-3 py-1 rounded text-sm`}>⚙️ {t.settings}</button>
                 </div>
               </div>
 
@@ -828,4 +828,3 @@
   </script>
 </body>
 </html>
-
